fluxcd/apps/overlays/production/ollama/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: ollama
          volume-type: data
      spec:
        storageClassName: ceph-rbd
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
