fluxcd/apps/overlays/production/ollama/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-lb
  annotations:
    lbipam.cilium.io/ips: "172.22.30.107"
    lbipam.cilium.io/sharing-key: "tingle-tuner"
    lbipam.cilium.io/sharing-cross-namespace: "*"
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
  - name: http
    port: 11434
    targetPort: 11434
    protocol: TCP
