fluxcd/apps/overlays/production/ollama/service-ollama-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    policy.prplanit.com/ingress: "true"
