fluxcd/apps/overlays/production/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Tools & Utilities (Tingle Tuner🔧)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - ollama.pcfae.com
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
